tests/expectations/compiler/integers/i64/min_fail.out
Error [ESAZ0374007]: Binary operation `-9223372036854775807i64 - 2i64` failed at compile time: sub overflow.
    --> compiler-test:8:16
     |
   8 |         return a - 2i64; // This line attempts to return -9223372036854775809i64 however, the smallest i64 value is -9223372036854775808i64.
     |                ^^^^^^^^
